--- a/Day05/02_페이지/01_메인페이지/main.html
+++ b/Day05/02_페이지/01_메인페이지/main.html
@@ -142,12 +142,83 @@
             </div>
         </section>
         <!-- 레이아웃A -->
-        <section id="section3"></section>
+        <section id="section3" class="layout-detail">
+            <div class="inner">
+                <div class="detail-left">
+                    <img src="img/sec-03.jpg" alt="섹션3 이미지">
+                </div>
+                <div class="detail-right">
+                    <div class="content-box">
+                        <h3>Title - section 02</h3>
+                        <p>
+                            Section Detail Contents
+                            Section Detail Contents
+                        </p>
+                    </div>
+                    <div class="btn-box">
+                        <a href="" class="btn">Button 01</a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- 레이아웃B -->
-        <section id="section4"></section>
+        <section id="section4" class="layout-detail reverse">
+            <div class="inner">
+                <div class="detail-left">
+                    <img src="img/sec-04.jpg" alt="섹션4 이미지">
+                </div>
+                <div class="detail-right">
+                    <div class="content-box">
+                        <h3>Title - section 02</h3>
+                        <p>
+                            Section Detail Contents
+                            Section Detail Contents
+                        </p>
+                    </div>
+                    <div class="btn-box">
+                        <a href="" class="btn">Button 01</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- 푸터 -->
-    <footer></footer>
+    <footer>
+        <div class="footer-menu">
+            <div class="site-map">
+                <div class="item">
+                    <ul>
+                        <li>Board</li>
+                        <li>공지사항</li>
+                        <li>자유 게시판</li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <ul>
+                        <li>Gallery</li>
+                        <li>취미 갤러리</li>
+                        <li>자유 갤러리</li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <ul>
+                        <li>About</li>
+                        <li>사이트 소개</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="family-site">
+                <select name="site" id="site">
+                    <option value="1">카카오</option>
+                    <option value="2">네이버</option>
+                    <option value="3">구글</option>
+                </select>
+            </div>
+        </div>
+        <div class="copy">
+            <p>Copyright ⓒ ALOHA CLASS. All Rights Reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
