--- a/Day09/01_이미지슬라이드/slick/index.html
+++ b/Day09/01_이미지슬라이드/slick/index.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slick</title>
-    <!-- slick 플러그인 -->
-    <!-- slick css CDN -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- slick css FILE -->
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
 
-
-    <!-- jQuery CDN -->
-        <!-- jQuery 라이브러리 파일로 포함하기 -->
-        <script src="js/jquery-3.7.1.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
-    <!-- slick js CDN -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <!-- slikc js FILE -->
+    <!-- jQuery CDN 방식으로 포함하기 -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- slick js FILE -->
     <script src="js/slick.min.js"></script>
-    <!-- js -->
-    <script src="js/script.js"></script></head>
+    <!-- script -->
+    <script src="js/script.js"></script>
+    
+</head>
 <body>
     <h1>slick 슬라이드</h1>
     <div class="slide-container">
